force-app/main/default/objects/Sales_Coach_Setup__c/Sales_Coach_Setup__c.object-meta.xml
<CustomObject>
    <description>Sales Coach Setup used to display details for Sales Coach stages.</description>
    <label>Sales Coach Setup</label>
    <nameField>
        <label>Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Coach Setups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>