force-app/main/default/objects/Sales_Coach_Setup__c/fields/Goal_Stage__c.field-meta.xml
<CustomField>
    <fullName>Goal_Stage__c</fullName>
    <label>Goal of Selling Stage:</label>
    <length>255</length>
    <type>Text</type>
</CustomField>