force-app/main/default/objects/Sales_Coach_Setup__c/fields/LanguageCode__c.field-meta.xml
<CustomField>
    <fullName>LanguageCode__c</fullName>
    <label>LanguageCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>