force-app/main/default/objects/Sales_Coach_Setup__c/fields/Stage_Color__c.field-meta.xml
<CustomField>
    <fullName>Stage_Color__c</fullName>
    <label>Stage Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>