force-app/main/default/objects/Sales_Coach_Setup__c/listViews/Commit_90.listView-meta.xml
<ListView>
    <fullName>Commit_90</fullName>
    <columns>NAME</columns>
    <columns>Language__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Commit - 90%</value>
    </filters>
    <label>Commit - 90%</label>
    <language>en_US</language>
</ListView>