force-app/main/default/objects/Sales_Coach_Setup__c/listViews/Discover_10.listView-meta.xml
<ListView>
    <fullName>Discover_10</fullName>
    <columns>NAME</columns>
    <columns>Language__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Discover - 10%</value>
    </filters>
    <label>Discover - 10%</label>
    <language>en_US</language>
</ListView>