force-app/main/default/objects/Sales_Coach_Setup__c/listViews/Lost_Cancelled_0.listView-meta.xml
<ListView>
    <fullName>Lost_Cancelled_0</fullName>
    <columns>NAME</columns>
    <columns>Language__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Lost</value>
    </filters>
    <label>Lost, Cancelled - 0%</label>
    <language>en_US</language>
</ListView>