force-app/main/default/objects/Sales_Coach_Setup__c/listViews/Plan_1.listView-meta.xml
<ListView>
    <fullName>Plan_1</fullName>
    <columns>NAME</columns>
    <columns>Language__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Plan - 1%</value>
    </filters>
    <label>Plan - 1%</label>
    <language>en_US</language>
</ListView>