force-app/main/default/objects/Sales_Coach_Setup__c/listViews/Propose_60.listView-meta.xml
<ListView>
    <fullName>Propose_60</fullName>
    <columns>NAME</columns>
    <columns>Language__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Propose - 60%</value>
    </filters>
    <label>Propose - 60%</label>
    <language>en_US</language>
</ListView>