force-app/main/default/objects/Sales_Coach_Setup__c/listViews/Qualify_30.listView-meta.xml
<ListView>
    <fullName>Qualify_30</fullName>
    <columns>NAME</columns>
    <columns>Language__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Qualify - 30%</value>
    </filters>
    <label>Qualify - 30%</label>
    <language>en_US</language>
</ListView>