force-app/main/default/objects/Sales_Coach_Setup__c/listViews/Sales_Coach_Japanese.listView-meta.xml
<ListView>
    <fullName>Sales_Coach_Japanese</fullName>
    <columns>NAME</columns>
    <columns>Language__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Language__c</field>
        <operation>equals</operation>
        <value>Japanese</value>
    </filters>
    <label>Sales Coach - Japanese</label>
    <language>en_US</language>
</ListView>