force-app/main/default/objects/Sales_Coach_Setup__c/listViews/Win_100.listView-meta.xml
<ListView>
    <fullName>Win_100</fullName>
    <columns>NAME</columns>
    <columns>Language__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>equals</operation>
        <value>Win - 100%</value>
    </filters>
    <label>Win - 100%</label>
    <language>en_US</language>
</ListView>